--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "vue-router": "^3.0.1",
     "vuetify": "^1.5.16",
     "vuex": "^3.1.1",
+    "vuex-persist": "^2.0.1",
     "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
